--- a/index.html
+++ b/index.html
@@ -14,34 +14,33 @@
   <div class="container">
     <h1 class="jumbotron">Got some Pig-Dice game for you!</h1>
     <div class="form-group">
-      <form id="pigDice" action="index.html" method="post">
-        <label for="Player-1">Enter your Name</label>
-        <input type="text" name="form-control" id="Player-1">
-        <br>
-        <label for="Player-2">Enter your name</label>
-        <input type="text" name="form-control" id="Player-2">
-        <br>
-        <button type="Submit" name="button">Submit</button>
+      <form id="player1" <label for="player1">Enter Player1 Name</label>
+        <input type="text" name="form-control" <br>
+      </form>
+      <form id="player2" <label for="Player2">Enter Player2 name</label>
+        <input type="text" name="form-control" <br>
+
       </form>
 
+      <button id="start" btn-success btn">Play</button>
     </div>
     <h2>Roll</h2>
-    <p><span class="Display" id="CurrentScore">0</span></p>
+    <p><span class="Display" id="currentScore">0</span></p>
     <h2>CurrentRoll</h2>
-    <p><span class=Display id="CurrentRoll">0</span></p>
+    <p><span class=Display id="currentRoll">0</span></p>
     <br>
-    <h3>Player-1:<span class="player1Output" ,?span>Your score is:</h3>
-    <p><span class="gameStatus" id="totalPlayer-1">0</span></p>
+    <h3>Player1:<span class="player1Output" ,?span>Your score is:</h3>
+    <p><span class="gameStatus" id="totalPlayer1">0</span></p>
     <div class="button">
       <button type="submit" class="roll" class="btn btn-sucess">ROLL</button>
       <button type="submit" class="hold" class="btn btn-success">HOLD</button>
-          </div>
+    </div>
     <br>
-    <h3>Player-2:<span class="player2Output"></span>Your score is:</h3>
-    <p><span class="gameStatus" id="totalPlayer-2">0</span></p>
+    <h3>Player2:<span class="player2Output"></span>Your score is:</h3>
+    <p><span class="gameStatus" id="totalPlayer2">0</span></p>
     <div class="button">
       <button type="submit" class="roll" class="btn btn-sucess">ROLL</button>
-      <button type="submit" class="hold" class="btn btn-success">HOLD</button>  
+      <button type="submit" class="hold" class="btn btn-success">HOLD</button>
     </div>
   </div>
 </body>
