--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="container">
-    <h1 class="jumbotron">Got some Pig-Dice game for you!</h1>
+    <h1 class="jumbotron"><strong>Got some Pig-Dice game for you!</strong></h1>
     <div class="form-group">
       <br>
       <form id="pig-dice>
@@ -20,16 +20,16 @@
         <h2>Player 1</h2>
         <h4>Current Score: <span class="current-score-1"></span></h4>
         <h4>Total Score: <span class="total-score-1"></span></h4>
-        <button id="roll-btn-1" type="button" name="button">Roll</button>
-        <button id="hold-btn-1" type="button" name="button">Hold</button>
+        <button id="roll-btn-1" type="button" name="button"><strong>Roll</strong></button>
+        <button id="hold-btn-1" type="button" name="button"><strong>Hold</strong></button>
     </div>
     <br>
     <div class="col-md-6">
       <h2>Player 2</h2>
       <h4>Current Score: <span class="current-score-2"></span></h4>
       <h4>Total Score: <span class="total-score-2"></span></h4>
-      <button id="roll-btn-2" type="button" name="button">Roll</button>
-      <button id="hold-btn-2" type="button" name="button">Hold</button>
+      <button id="roll-btn-2" type="button" name="button"><strong>Roll</strong></button>
+      <button id="hold-btn-2" type="button" name="button"><strong>Hold</strong></button>
     </div>
 
     </form>
