add unordered list

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <h1 class="jumbotron"><strong>Got some Pig-Dice game for you!</strong></h1>
     <div class="form-group">
       <br>
+      <h2><strong>Rules for the game</strong></h2>
+      <ul>
+        <li>Player one rolls the dice.</li>
+        <li>Player one can pass the dice to player two by clicking the hold button.</li>
+        <li>If player one rolls a "one" then he loses that round and player two takes over and vice versa.</li>
+        <li>The winner scores the highest addition when the dice is rolled.</li>
+
+      </ul>
       <form id="pig-dice>
       <div class=" col-md-6">
         <h2>Player 1</h2>
