add restart button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <li>Player one can pass the dice to player two by clicking the hold button.</li>
         <li>If player one rolls a "one" then he loses that round and player two takes over and vice versa.</li>
         <li>The winner scores the highest addition when the dice is rolled.</li>
-
       </ul>
       <form id="pig-dice>
       <div class=" col-md-6">
@@ -39,7 +38,12 @@
       <button id="roll-btn-2" type="button" name="button"><strong>Roll</strong></button>
       <button id="hold-btn-2" type="button" name="button"><strong>Hold</strong></button>
     </div>
+    <br>
+    <button id="restart">
+      <a class="button" href="index.html">Restart</a>
+  </div>
 
+    </div>
     </form>
   </div>
   </div>
